--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# netlify
+*/node_modules
+# Local Netlify folder
+.netlify
