--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cloud_firestore: ^4.3.0
   cupertino_icons: ^1.0.2
   firebase_core: ^2.4.0
+  firebase_messaging: ^14.2.0
   flutter:
     sdk: flutter
   flutter_datetime_picker: ^1.5.1
