--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,14 +32,15 @@ dependencies:
   firebase_core: ^2.4.0
   flutter:
     sdk: flutter
-  flutter_datetime_picker: ^1.5.1
+  flutter_localizations:
+    sdk: flutter
   html: ^0.15.0
-  http: ^0.13.4
-  intl: ^0.17.0
+  http: ^1.0.0
+  intl: any
   permission_handler: ^10.2.0
-  photo_gallery: ^1.1.1
+  photo_gallery: ^2.0.1
   provider: ^6.0.5
-  share_plus: ^6.3.0
+  share_plus: ^7.0.2
   shared_preferences: ^2.0.15
   table_calendar: ^3.0.4
   url_launcher: ^6.1.5
