--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ">=3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,9 +34,12 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   html: ^0.15.0
   http: ^1.0.0
   intl: any
+  percent_indicator: ^4.2.3
   permission_handler: ^10.2.0
   photo_gallery: ^2.0.1
   provider: ^6.0.5
